[tool.poetry]
name = "base16-helix-builder"
version = "0.1.0"
description = "Generate color themes for helix-editor from base16 yaml files"
authors = ["lodobo <lodobo303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
